refactor(apps): drop subdomain field in favor of listener remote ports
